Changelog of flooding
===================================================


1.0.6 (unreleased)
------------------

- Nothing changed yet.


1.0.5 (2012-03-01)
------------------

- Nothing changed yet.


1.0.4 (2012-03-01)
------------------

- Changed production database settings. Removed apache config files.


1.0.3 (2012-03-01)
------------------

- Increased django-staticfiles version trying to get it to work.


1.0.2 (2012-03-01)
------------------

- Changed path to external data share.


1.0.1 (2012-03-01)
------------------

- Fixed staging settings.


1.0 (2012-03-01)
----------------

- Lots of changes for the move to Amsterdam, new buildouts


0.14 (2011-05-25)
-----------------

- Nothing changed yet.


0.13 (2011-05-06)
-----------------

- Nothing changed yet.


0.12 (2011-05-06)
-----------------

- Nothing changed yet.


0.11 (2011-04-18)
-----------------

- Nothing changed yet.


0.10 (2011-03-25)
-----------------

- Nothing changed yet.


0.9 (2011-03-23)
----------------

- Nothing changed yet.


0.8 (2011-03-03)
----------------

- Nothing changed yet.


0.7 (2011-02-08)
----------------

- Nothing changed yet.


0.6 (2011-02-07)
----------------

- Nothing changed yet.


0.5 (2011-02-01)
----------------

- Including a couple of fixes to the setup from production.


0.4 (2011-02-01)
----------------

- Nothing changed yet.


0.3 (2011-02-01)
----------------

- Nothing changed yet.


0.2 (2011-01-20)
----------------

- Nothing changed yet.


0.1 (2010-04-23)
----------------

- Fixed up the configuration: database, domainname, external PNGs with model
  results, etc.

- Initial library skeleton created by nensskel.