@@ -49,7 +49,7 @@ GDAL = 1.7.3
 iso8601 = 0.1.4
 iw.recipe.cmd = 0.3
 lizard-base =
-lizard-flooding = 1.14
+lizard-flooding = 1.15
 lizard-flooding-worker =
 meld3 = 0.6.7
 nens = 1.5 #check!
@@ -67,6 +67,12 @@ zest.releaser = 3.28
 scipy = 0.9.0
 numpy = 1.5.1
 matplotlib = 1.0.1
+
+[sources]
+lizard-base = svn https://office.lizard.net/svn/Products/djangoapps/lizard-base/trunk
+lizard-flooding = svn https://office.lizard.net/svn/Products/djangoapps/lizard-flooding/trunk
+lizard-presentation = svn https://office.lizard.net/svn/Products/djangoapps/lizard-presentation/trunk
+
 
 [sysegg]
 # Add eggs here that are best handled through OS-level packages.
