@@ -8,7 +8,15 @@ logging.basicConfig(
 
 from flooding.settings import *
 
+INTERNAL_IPS = ('127.0.0.1',)
+
 DEBUG = True
+
+MIDDLEWARE_CLASSES += (
+    'debug_toolbar.middleware.DebugToolbarMiddleware',
+    )
+
+INSTALLED_APPS += ('debug_toolbar',)
 
 #DATABASES = {
 #    'default': {
