@@ -5,7 +5,13 @@ Changelog of flooding
 1.0.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- removed a lot of unused files form weblib
+
+- added django debug bar
+
+- removed CSRF middleware
+
+- pinned new version of lizard-flooding (1.15)
 
 
 1.0.5 (2012-03-01)
